started work on sidebar

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -42,8 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try: from IPython import display\n",
-    "except ImportError: display=None"
+    "# try: from IPython import display\n",
+    "# except ImportError: display=None"
    ]
   },
   {
@@ -53,13 +53,48 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "css_scope_inline = (fh.Script(src=\"https://cdn.jsdelivr.net/gh/gnat/css-scope-inline@main/script.js\"))\n",
-    "#css_reset = \n",
-    "css_vars = fh.Style(\"\"\"\n",
-    "root: {\n",
-    "    --color-zinc-50: #ececec;\n",
-    "}\n",
-    "\"\"\")"
+    "hdrs = [\n",
+    "    fh.Link(rel=\"preconnect\", href=\"https://rsms.me/\"),\n",
+    "    fh.Link(rel=\"stylesheet\", href=\"https://rsms.me/inter/inter.css\"),\n",
+    "    fh.Script(src=\"https://unpkg.com/htmx.org@next/dist/htmx.min.js\"),\n",
+    "    fh.Script(src=\"https://cdn.jsdelivr.net/gh/answerdotai/fasthtml-js@1.0.4/fasthtml.js\"),\n",
+    "    fh.Script(src=\"https://cdn.jsdelivr.net/gh/answerdotai/surreal@main/surreal.js\"),\n",
+    "    fh.Script(src=\"https://cdn.jsdelivr.net/gh/gnat/css-scope-inline@main/script.js\"),\n",
+    "    fh.Style(\"\"\"\n",
+    "    :root {\n",
+    "      --zinc-50: #fafafa;\n",
+    "      --zinc-100: #f4f4f5;\n",
+    "      --zinc-200: #e4e4e7;\n",
+    "      --zinc-300: #d4d4d8;\n",
+    "      --zinc-400: #a1a1aa;\n",
+    "      --zinc-500: #71717a;\n",
+    "      --zinc-600: #52525b;\n",
+    "      --zinc-700: #3f3f46;\n",
+    "      --zinc-800: #27272a;\n",
+    "      --zinc-900: #18181b;\n",
+    "      --zinc-950: #09090b;\n",
+    "\n",
+    "      --red-50: #fef2f2;\n",
+    "      --red-100: #fee2e2;\n",
+    "      --red-200: #fecaca;\n",
+    "      --red-300: #fca5a5;\n",
+    "      --red-400: #f87171;\n",
+    "      --red-500: #ef4444;\n",
+    "      --red-600: #dc2626;\n",
+    "      --red-700: #b91c1c;\n",
+    "      --red-800: #991b1b;\n",
+    "      --red-900: #7f1d1d;\n",
+    "      --red-950: #450a0a;  \n",
+    "\n",
+    "      font-size: 1rem;\n",
+    "      font-family: Inter, sans-serif;\n",
+    "      font-feature-settings: 'liga' 1, 'calt' 1; /* fix for Chrome */\n",
+    "    }\n",
+    "    @supports (font-variation-settings: normal) {\n",
+    "        :root { font-family: InterVariable, sans-serif; }\n",
+    "    }\n",
+    "    \"\"\")\n",
+    "]"
    ]
   },
   {
@@ -70,7 +105,42 @@
     {
      "data": {
       "text/html": [
-       "<script src=\"https://cdn.jsdelivr.net/gh/gnat/css-scope-inline@main/script.js\"></script>"
+       "<link rel=\"preconnect\" href=\"https://rsms.me/\">\n",
+       "<link rel=\"stylesheet\" href=\"https://rsms.me/inter/inter.css\">\n",
+       "<script src=\"https://unpkg.com/htmx.org@next/dist/htmx.min.js\"></script><script src=\"https://cdn.jsdelivr.net/gh/answerdotai/fasthtml-js@1.0.4/fasthtml.js\"></script><script src=\"https://cdn.jsdelivr.net/gh/answerdotai/surreal@main/surreal.js\"></script><script src=\"https://cdn.jsdelivr.net/gh/gnat/css-scope-inline@main/script.js\"></script><style>\n",
+       "    :root {\n",
+       "      --zinc-50: #fafafa;\n",
+       "      --zinc-100: #f4f4f5;\n",
+       "      --zinc-200: #e4e4e7;\n",
+       "      --zinc-300: #d4d4d8;\n",
+       "      --zinc-400: #a1a1aa;\n",
+       "      --zinc-500: #71717a;\n",
+       "      --zinc-600: #52525b;\n",
+       "      --zinc-700: #3f3f46;\n",
+       "      --zinc-800: #27272a;\n",
+       "      --zinc-900: #18181b;\n",
+       "      --zinc-950: #09090b;\n",
+       "\n",
+       "      --red-50: #fef2f2;\n",
+       "      --red-100: #fee2e2;\n",
+       "      --red-200: #fecaca;\n",
+       "      --red-300: #fca5a5;\n",
+       "      --red-400: #f87171;\n",
+       "      --red-500: #ef4444;\n",
+       "      --red-600: #dc2626;\n",
+       "      --red-700: #b91c1c;\n",
+       "      --red-800: #991b1b;\n",
+       "      --red-900: #7f1d1d;\n",
+       "      --red-950: #450a0a;  \n",
+       "\n",
+       "      font-size: 1rem;\n",
+       "      font-family: Inter, sans-serif;\n",
+       "      font-feature-settings: 'liga' 1, 'calt' 1; /* fix for Chrome */\n",
+       "    }\n",
+       "    @supports (font-variation-settings: normal) {\n",
+       "        :root { font-family: InterVariable, sans-serif; }\n",
+       "    }\n",
+       "    </style>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -81,7 +151,7 @@
     }
    ],
    "source": [
-    "fh.show(css_scope_inline)"
+    "fh.show(*hdrs)"
    ]
   },
   {
@@ -102,19 +172,38 @@
     "def Button(*args, variant:str = \"default\", **kwargs):\n",
     "    styles = \"\"\"\n",
     "    me {\n",
-    "        height: 4rem;\n",
-    "        padding-left: 2rem;\n",
-    "        padding-right: 2rem;\n",
-    "        border: 1px solid #ececec;\n",
+    "        position: relative;\n",
+    "        display: inline-flex;\n",
+    "        align-items: center;\n",
+    "        justify-content: center;\n",
+    "        font-weight: 500;\n",
+    "        gap: 0.5rem;\n",
+    "        white-space: nowrap;\n",
+    "        height: 2.5rem;\n",
+    "        font-size: 0.875rem;\n",
+    "        line-height: 1.25rem;\n",
     "        border-radius: 0.5rem;\n",
+    "        padding-left: 1rem;\n",
+    "        padding-right: 1rem;\n",
+    "        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);\n",
+    "        cursor: pointer;\n",
+    "        border-style: solid;\n",
+    "        border-width: 0px;\n",
+    "        background-color: transparent;\n",
     "    }\n",
     "    \"\"\"\n",
     "    if variant == \"default\":\n",
-    "        styles += \"me { background: gray; }\"\n",
+    "        styles += \"me { background-color: var(--zinc-800); color: white; border-color: var(--zinc-200); }\"\n",
+    "        styles += \"me:hover { background-color: var(--zinc-900); }\"\n",
     "    elif variant == \"outline\":\n",
-    "        styles += \"me { background: white; }\"\n",
+    "        styles += \"me { background-color: white; color: var(--zinc-700); border-width: 1px; border-color: var(--zinc-200); }\"\n",
+    "        styles += \"me:hover { background-color: var(--zinc-50); }\"\n",
     "    elif variant == \"ghost\":\n",
-    "        styles += \"me { background: blue; }\"\n",
+    "        styles += \"me { box-shadow: none; }\"\n",
+    "        styles += \"me:hover { background-color: var(--zinc-100); }\"\n",
+    "    elif variant == \"bad\":\n",
+    "        styles += \"me { color: white; background-color: var(--red-500); }\"\n",
+    "        styles += \"me:hover { background-color: var(--red-600); }\"\n",
     "    return fh.Button(\n",
     "        fh.Style(styles), *args, **kwargs)"
    ]
@@ -127,36 +216,133 @@
     {
      "data": {
       "text/html": [
+       "<link rel=\"preconnect\" href=\"https://rsms.me/\">\n",
+       "<link rel=\"stylesheet\" href=\"https://rsms.me/inter/inter.css\">\n",
+       "<script src=\"https://unpkg.com/htmx.org@next/dist/htmx.min.js\"></script><script src=\"https://cdn.jsdelivr.net/gh/answerdotai/fasthtml-js@1.0.4/fasthtml.js\"></script><script src=\"https://cdn.jsdelivr.net/gh/answerdotai/surreal@main/surreal.js\"></script><script src=\"https://cdn.jsdelivr.net/gh/gnat/css-scope-inline@main/script.js\"></script><style>\n",
+       "    :root {\n",
+       "      --zinc-50: #fafafa;\n",
+       "      --zinc-100: #f4f4f5;\n",
+       "      --zinc-200: #e4e4e7;\n",
+       "      --zinc-300: #d4d4d8;\n",
+       "      --zinc-400: #a1a1aa;\n",
+       "      --zinc-500: #71717a;\n",
+       "      --zinc-600: #52525b;\n",
+       "      --zinc-700: #3f3f46;\n",
+       "      --zinc-800: #27272a;\n",
+       "      --zinc-900: #18181b;\n",
+       "      --zinc-950: #09090b;\n",
+       "\n",
+       "      --red-50: #fef2f2;\n",
+       "      --red-100: #fee2e2;\n",
+       "      --red-200: #fecaca;\n",
+       "      --red-300: #fca5a5;\n",
+       "      --red-400: #f87171;\n",
+       "      --red-500: #ef4444;\n",
+       "      --red-600: #dc2626;\n",
+       "      --red-700: #b91c1c;\n",
+       "      --red-800: #991b1b;\n",
+       "      --red-900: #7f1d1d;\n",
+       "      --red-950: #450a0a;  \n",
+       "\n",
+       "      font-size: 1rem;\n",
+       "      font-family: Inter, sans-serif;\n",
+       "      font-feature-settings: 'liga' 1, 'calt' 1; /* fix for Chrome */\n",
+       "    }\n",
+       "    @supports (font-variation-settings: normal) {\n",
+       "        :root { font-family: InterVariable, sans-serif; }\n",
+       "    }\n",
+       "    </style>\n",
        "<div>\n",
        "  <style>me {display:flex;gap:2rem;}</style>\n",
        "<button>    <style>\n",
        "    me {\n",
-       "        height: 4rem;\n",
-       "        padding-left: 2rem;\n",
-       "        padding-right: 2rem;\n",
-       "        border: 1px solid #ececec;\n",
+       "        position: relative;\n",
+       "        display: inline-flex;\n",
+       "        align-items: center;\n",
+       "        justify-content: center;\n",
+       "        font-weight: 500;\n",
+       "        gap: 0.5rem;\n",
+       "        white-space: nowrap;\n",
+       "        height: 2.5rem;\n",
+       "        font-size: 0.875rem;\n",
+       "        line-height: 1.25rem;\n",
        "        border-radius: 0.5rem;\n",
+       "        padding-left: 1rem;\n",
+       "        padding-right: 1rem;\n",
+       "        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);\n",
+       "        cursor: pointer;\n",
+       "        border-style: solid;\n",
+       "        border-width: 0px;\n",
+       "        background-color: transparent;\n",
        "    }\n",
-       "    me { background: gray; }</style>\n",
+       "    me { background-color: var(--zinc-800); color: white; border-color: var(--zinc-200); }me:hover { background-color: var(--zinc-900); }</style>\n",
        "Default</button><button>    <style>\n",
        "    me {\n",
-       "        height: 4rem;\n",
-       "        padding-left: 2rem;\n",
-       "        padding-right: 2rem;\n",
-       "        border: 1px solid #ececec;\n",
+       "        position: relative;\n",
+       "        display: inline-flex;\n",
+       "        align-items: center;\n",
+       "        justify-content: center;\n",
+       "        font-weight: 500;\n",
+       "        gap: 0.5rem;\n",
+       "        white-space: nowrap;\n",
+       "        height: 2.5rem;\n",
+       "        font-size: 0.875rem;\n",
+       "        line-height: 1.25rem;\n",
        "        border-radius: 0.5rem;\n",
+       "        padding-left: 1rem;\n",
+       "        padding-right: 1rem;\n",
+       "        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);\n",
+       "        cursor: pointer;\n",
+       "        border-style: solid;\n",
+       "        border-width: 0px;\n",
+       "        background-color: transparent;\n",
        "    }\n",
-       "    me { background: white; }</style>\n",
+       "    me { background-color: white; color: var(--zinc-700); border-width: 1px; border-color: var(--zinc-200); }me:hover { background-color: var(--zinc-50); }</style>\n",
        "Outline</button><button>    <style>\n",
        "    me {\n",
-       "        height: 4rem;\n",
-       "        padding-left: 2rem;\n",
-       "        padding-right: 2rem;\n",
-       "        border: 1px solid #ececec;\n",
+       "        position: relative;\n",
+       "        display: inline-flex;\n",
+       "        align-items: center;\n",
+       "        justify-content: center;\n",
+       "        font-weight: 500;\n",
+       "        gap: 0.5rem;\n",
+       "        white-space: nowrap;\n",
+       "        height: 2.5rem;\n",
+       "        font-size: 0.875rem;\n",
+       "        line-height: 1.25rem;\n",
        "        border-radius: 0.5rem;\n",
+       "        padding-left: 1rem;\n",
+       "        padding-right: 1rem;\n",
+       "        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);\n",
+       "        cursor: pointer;\n",
+       "        border-style: solid;\n",
+       "        border-width: 0px;\n",
+       "        background-color: transparent;\n",
        "    }\n",
-       "    me { background: blue; }</style>\n",
-       "Ghost</button></div>\n"
+       "    me { box-shadow: none; }me:hover { background-color: var(--zinc-100); }</style>\n",
+       "Ghost</button><button>    <style>\n",
+       "    me {\n",
+       "        position: relative;\n",
+       "        display: inline-flex;\n",
+       "        align-items: center;\n",
+       "        justify-content: center;\n",
+       "        font-weight: 500;\n",
+       "        gap: 0.5rem;\n",
+       "        white-space: nowrap;\n",
+       "        height: 2.5rem;\n",
+       "        font-size: 0.875rem;\n",
+       "        line-height: 1.25rem;\n",
+       "        border-radius: 0.5rem;\n",
+       "        padding-left: 1rem;\n",
+       "        padding-right: 1rem;\n",
+       "        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);\n",
+       "        cursor: pointer;\n",
+       "        border-style: solid;\n",
+       "        border-width: 0px;\n",
+       "        background-color: transparent;\n",
+       "    }\n",
+       "    me { color: white; background-color: var(--red-500); }me:hover { background-color: var(--red-600); }</style>\n",
+       "Bad</button></div>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -167,10 +353,11 @@
     }
    ],
    "source": [
-    "fh.show(fh.Div(fh.Style(\"me {display:flex;gap:2rem;}\"),\n",
+    "fh.show(*hdrs, fh.Div(fh.Style(\"me {display:flex;gap:2rem;}\"),\n",
     "               Button(\"Default\"), \n",
     "               Button(\"Outline\", variant=\"outline\"),\n",
-    "               Button(\"Ghost\", variant=\"ghost\")\n",
+    "               Button(\"Ghost\", variant=\"ghost\"),\n",
+    "               Button(\"Bad\", variant=\"bad\")\n",
     "              ))"
    ]
   },
@@ -299,17 +486,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#| hide\n",
+    "import nbdev; nbdev.nbdev_export()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#| hide\n",
-    "import nbdev; nbdev.nbdev_export()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
