wip sidebar example

--- a/nbs/01_sidebar.ipynb
+++ b/nbs/01_sidebar.ipynb
@@ -416,7 +416,7 @@
        "    <style>me { min-height: 100svh; }</style>\n",
        "    <style>me { flex: 1 1 0%; }</style>\n",
        "    <header>\n",
-       "      <style>me { padding-left: 1rem; padding-right: 1rem; border-bottom: 1px solid var(--zinc-200); }</style>\n",
+       "      <style>me { display: flex; padding: 1rem; gap: 1rem; border-bottom: 1px solid var(--zinc-200); }</style>\n",
        "<button hx-on-click=\"\n",
        "            htmx.find('#sidebar-render').dataset.state = htmx.find('#sidebar-render').dataset.state === 'collapsed' ? 'expanded' : 'collapsed'\n",
        "            console.log(htmx.find('#sidebar-render').dataset.state)\n",
@@ -445,12 +445,58 @@
        "&#9776;</button>      <div>\n",
        "        <style>me { width: 1px; height: 100%; background: var(--zinc-300); }</style>\n",
        "      </div>\n",
-       "      <ul aria-label=\"breadcrumb\">\n",
+       "      <ol aria-label=\"breadcrumb\">\n",
+       "        <style>\n",
+       "                    me {\n",
+       "                        list-style: none!important;\n",
+       "                        padding: 0px!important;\n",
+       "                        margin: 0px!important;\n",
+       "                        display: flex;\n",
+       "                        flex-wrap: wrap;\n",
+       "                        align-items: center;\n",
+       "                        gap: 0.375rem; /* 1.5 * 0.25rem */\n",
+       "                        word-wrap: break-word;\n",
+       "                        font-size: 0.875rem; /* 14px */\n",
+       "                        color: var(--zinc-600);\n",
+       "                    }\n",
+       "                    </style>\n",
        "        <li>Home</li>\n",
        "        <li>Specific</li>\n",
-       "      </ul>\n",
+       "      </ol>\n",
        "    </header>\n",
-       "    <h1>Main content</h1>\n",
+       "    <div>\n",
+       "      <style>\n",
+       "                me {\n",
+       "                    display: flex;\n",
+       "                    flex-direction: column;\n",
+       "                    gap: 1rem;\n",
+       "                    padding: 1rem;\n",
+       "                    flex: 1 1 0%;\n",
+       "                }\n",
+       "                </style>\n",
+       "      <div>\n",
+       "        <style>\n",
+       "                    me {\n",
+       "                        display: grid;\n",
+       "                        grid-auto-rows: min-content;\n",
+       "                        gap: 1rem;\n",
+       "                        grid-template-columns: repeat(3, 1fr);\n",
+       "                    }\n",
+       "                    </style>\n",
+       "        <div>\n",
+       "          <style>me { background-color: var(--zinc-50); width: 100%; min-height: 10rem; border-radius: 0.75rem; }</style>\n",
+       "        </div>\n",
+       "        <div>\n",
+       "          <style>me { background-color: var(--zinc-50); width: 100%; min-height: 10rem; border-radius: 0.75rem; }</style>\n",
+       "        </div>\n",
+       "        <div>\n",
+       "          <style>me { background-color: var(--zinc-50); width: 100%; min-height: 10rem; border-radius: 0.75rem; }</style>\n",
+       "        </div>\n",
+       "      </div>\n",
+       "      <div>\n",
+       "        <style>me { background-color: var(--zinc-50); width: 100%; min-height: 20rem; border-radius: 0.75rem; }</style>\n",
+       "      </div>\n",
+       "    </div>\n",
        "  </div>\n",
        "</div>\n"
       ],
@@ -484,30 +530,56 @@
     "        MainContent(\n",
     "            fh.Style(\"me { flex: 1 1 0%; }\"),\n",
     "            fh.Header(\n",
-    "                fh.Style(\"me { padding-left: 1rem; padding-right: 1rem; border-bottom: 1px solid var(--zinc-200); }\"),\n",
+    "                fh.Style(\"me { display: flex; padding: 1rem; gap: 1rem; border-bottom: 1px solid var(--zinc-200); }\"),\n",
     "                Button(fh.NotStr(\"&#9776;\"), variant=\"ghost\", hx_on_click=\"\"\"\n",
     "            htmx.find('#sidebar-render').dataset.state = htmx.find('#sidebar-render').dataset.state === 'collapsed' ? 'expanded' : 'collapsed'\n",
     "            console.log(htmx.find('#sidebar-render').dataset.state)\n",
     "            \"\"\"),\n",
     "                fh.Div(fh.Style(\"me { width: 1px; height: 100%; background: var(--zinc-300); }\")),\n",
-    "                fh.Ul(aria_label=\"breadcrumb\")(\n",
+    "                fh.Ol(aria_label=\"breadcrumb\")(\n",
+    "                    fh.Style(\"\"\"\n",
+    "                    me {\n",
+    "                        list-style: none!important;\n",
+    "                        padding: 0px!important;\n",
+    "                        margin: 0px!important;\n",
+    "                        display: flex;\n",
+    "                        flex-wrap: wrap;\n",
+    "                        align-items: center;\n",
+    "                        gap: 0.375rem; /* 1.5 * 0.25rem */\n",
+    "                        word-wrap: break-word;\n",
+    "                        font-size: 0.875rem; /* 14px */\n",
+    "                        color: var(--zinc-600);\n",
+    "                    }\n",
+    "                    \"\"\"),\n",
     "                    fh.Li(\"Home\"), fh.Li(\"Specific\")\n",
     "                )\n",
     "            ),\n",
-    "            fh.H1(\"Main content\"),\n",
+    "            fh.Div(\n",
+    "                fh.Style(\"\"\"\n",
+    "                me {\n",
+    "                    display: flex;\n",
+    "                    flex-direction: column;\n",
+    "                    gap: 1rem;\n",
+    "                    padding: 1rem;\n",
+    "                    flex: 1 1 0%;\n",
+    "                }\n",
+    "                \"\"\"),\n",
+    "                fh.Div(\n",
+    "                    fh.Style(\"\"\"\n",
+    "                    me {\n",
+    "                        display: grid;\n",
+    "                        grid-auto-rows: min-content;\n",
+    "                        gap: 1rem;\n",
+    "                        grid-template-columns: repeat(3, 1fr);\n",
+    "                    }\n",
+    "                    \"\"\"),\n",
+    "                    *[fh.Div(fh.Style(\"me { background-color: var(--zinc-50); width: 100%; min-height: 10rem; border-radius: 0.75rem; }\"))] * 3\n",
+    "                ),\n",
+    "                fh.Div(fh.Style(\"me { background-color: var(--zinc-50); width: 100%; min-height: 20rem; border-radius: 0.75rem; }\"))\n",
+    "            )\n",
     "        )\n",
     "    )\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f50cad52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fh.show??"
    ]
   },
   {
